fix scrollbar OK

--- a/pomodoro_frontend/src/styles/style.scss
+++ b/pomodoro_frontend/src/styles/style.scss
@@ -32,6 +32,7 @@ body {
 	letter-spacing: 2px;
 	color: black;
 	font-family: 'Open sans';
+	overflow: hidden;
 }
 
 section.header {
